<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="pl.weeia.a202128.astroweather.MoonFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:layout_weight="0"
            android:scaleType="centerInside"
            android:src="@drawable/moon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wschod"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zachod"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/timeLabelMoonrise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/czas"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeMoonrise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="czas"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/timeMoonset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="czas"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/newMoonLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/newMoon"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fullMoonLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fullMoon"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/newMoon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="newMoon"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fullMoon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="fullMoon"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/moonDayLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/dzienMiesSyno"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/moonDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:text="moonDay"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/moonPhaseLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/moonPhase"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/moonPhase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="moonPhase"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
